--- a/replay/Cargo.toml
+++ b/replay/Cargo.toml
@@ -4,6 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-savant_core = { git = "https://github.com/insight-platform/savant-rs", tag = "0.2.18" }
+savant_core = { git = "https://github.com/insight-platform/savant-rs", tag = "0.2.19" }
 anyhow = "1"
 uuid = { version = "1", features = ["v7"] }
+bincode = { version = "2.0.0-rc.3" }
+rocksdb = { version = "0.22" }
+md-5 = "0.10"
+hashbrown = "0.14"
+log = "0.4"
+env_logger = "0.11"
+
+[dev-dependencies]
+tempfile = "3.2"
+
+
