--- a/replaydb/Cargo.toml
+++ b/replaydb/Cargo.toml
@@ -14,6 +14,8 @@ hashbrown = "0.14"
 log = "0.4"
 env_logger = "0.11"
 parking_lot = "0.12"
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 
 [dev-dependencies]
 tempfile = "3.2"
