--- a/replaydb/Cargo.toml
+++ b/replaydb/Cargo.toml
@@ -17,7 +17,9 @@ parking_lot = "0.12"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio-timerfd = "0.2"
 derive_builder = "0.20"
+
 
 [dev-dependencies]
 tempfile = "3.2"
