added service configuration parsing and building

--- a/replaydb/Cargo.toml
+++ b/replaydb/Cargo.toml
@@ -19,8 +19,7 @@ serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tokio-timerfd = "0.2"
 derive_builder = "0.20"
-
+twelf = { version = "0.15", features = ["json", "env", "shellexpand"], default-features = false }
 
 [dev-dependencies]
-tempfile = "3.2"
-
+tempfile = "3.10"
