--- a/replay/Cargo.toml
+++ b/replay/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.11"
-
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+replaydb = { path = "../replaydb" }
+anyhow = "1"
