--- a/replay/Cargo.toml
+++ b/replay/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [[bin]]
 name = "replay-edge"
-path = "src/edge/main.rs"
+path = "src/edge/edge.rs"
 
 [[bin]]
 name = "replay-cloud"
-path = "src/cloud/main.rs"
+path = "src/cloud/cloud.rs"
 
 [dependencies]
 env_logger = "0.11"
