--- a/replaydb/Cargo.toml
+++ b/replaydb/Cargo.toml
@@ -1,26 +1,37 @@
 [package]
 name = "replaydb"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+description.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme.workspace = true
+keywords.workspace = true
+categories.workspace = true
+license.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 savant_core = { git = "https://github.com/insight-platform/savant-rs", tag = "0.2.27" }
-anyhow = "1"
-uuid = { version = "1", features = ["v7"] }
 bincode = { version = "2.0.0-rc.3" }
 rocksdb = { version = "0.22" }
 md-5 = "0.10"
 mini-moka = "0.10"
-hashbrown = "0.14"
-log = "0.4"
-env_logger = "0.11"
-serde_json = "1"
-serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-tokio-timerfd = "0.2"
-derive_builder = "0.20"
 twelf = { version = "0.15", features = ["json", "env", "shellexpand"], default-features = false }
-parking_lot = "0.12"
+
+anyhow = { workspace = true }
+derive_builder = { workspace = true }
+env_logger = { workspace = true }
+hashbrown = { workspace = true }
+log = { workspace = true }
+uuid = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+parking_lot = { workspace = true }
+tokio = { workspace = true }
+tokio-timerfd = { workspace = true }
+
 
 [dev-dependencies]
 tempfile = "3.10"
