--- a/replay/Cargo.toml
+++ b/replay/Cargo.toml
@@ -31,5 +31,6 @@ tokio = { workspace = true }
 tokio-timerfd = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+uuid = { workspace = true }
 
 actix-web = "4"
