--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
   linux:
     runs-on:
       - self-hosted
-      - ubuntu-latest
+      - ${{ matrix.runner }}
     permissions:
       contents: read
       packages: write
@@ -28,10 +28,12 @@ jobs:
             name: replay-arm64
             arch: linux/arm64
             tag: ghcr.io/insight-platform/replay-arm64
+            runner: ARM64
           - docker_file: Dockerfile
             name: replay-x86
             arch: linux/amd64
             tag: ghcr.io/insight-platform/replay-x86
+            runner: X64
 
     steps:
       - name: Checkout repository
