--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,10 +30,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: sudo sh -e install_deps.sh
-
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r docs/requirements.txt
 
       - name: Build Docs
         run: |
