--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -61,6 +61,7 @@ jobs:
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
       - name: Build docker image for ${{ env.GITHUB_REF_SLUG }}
+        if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v5 # v5.0.0
         with:
           file: ${{ matrix.docker_file }}
